finished responsive design

--- a/styles/navbar.module.scss
+++ b/styles/navbar.module.scss
@@ -507,3 +507,8 @@
     padding-right: 5%;
   }
 }
+@media (min-width: 1025px) and (max-width: 1200px) {
+  .navmenuIcon {
+    padding-right: 3%;
+  }
+}
