--- a/styles/page.module.scss
+++ b/styles/page.module.scss
@@ -884,7 +884,7 @@
   margin-top: 10.5vh;
   gap:.725rem;
   height: 12.75px;
-  padding-left: 3.875rem;
+  padding-left: 3rem;
 }
 .testimonialSlide {
   width: 13px;
@@ -2303,7 +2303,7 @@ padding-bottom: 5rem;
     margin-top: 10.5vh;
     gap:.725rem;
     height: 12.75px;
-    padding-left: 3.875rem;
+    padding-left: 3rem;
   }
   .testimonialSlide {
     width: 13px;
@@ -3693,7 +3693,7 @@ padding-bottom: 5rem;
     margin-top: 10.5vh;
     gap:.725rem;
     height: 12.75px;
-    padding-left: 3.875rem;
+    padding-left: 3rem;
   }
   .testimonialSlide {
     width: 13px;
@@ -5082,7 +5082,7 @@ padding-bottom: 5rem;
     margin-top: 10.5vh;
     gap:.725rem;
     height: 12.75px;
-    padding-left: 3.875rem;
+    padding-left: 3rem;
   }
   .testimonialSlide {
     width: 13px;
@@ -5492,7 +5492,7 @@ padding-bottom: 5rem;
 }
 
 
-@media (min-width: 1025px) and (max-width: 1200px) {
+@media (min-width: 1025px) and (max-width: 1280px) {
   .main {
     display: flex;
     flex-direction: column;
@@ -5605,8 +5605,8 @@ padding-bottom: 5rem;
   
   .heroButtonApply {
     
-    width: 15.3125rem;
-    height: 4.25rem;
+    width: 14rem;
+    height: 4rem;
     flex-shrink: 0;
     border: 4px solid #ECCAB1;
     background: #E3A77C;
@@ -5637,8 +5637,8 @@ padding-bottom: 5rem;
     letter-spacing: -.5px;
   }
   .heroButtonAlt {
-    width: 15.3125rem;
-    height: 4.25rem;
+    width: 14rem;
+    height: 4rem;
     border: 2px solid #fff;
 
     display: flex;
@@ -6092,14 +6092,14 @@ padding-bottom: 5rem;
   }
   .applyHeroText {
     color: #FAF3D6;
-    text-shadow: 0px 0.5px 12px rgba(250, 243, 214, 0.70);
+    text-shadow: 0px 0.5px 8px rgba(250, 243, 214, 0.70);
     font-family: Helvetica Neue;
     //font-size: 56.25px;
     font-size: 3.515625rem;
     font-size: clamp(2.75rem, 4.325vw, 3.51rem);
     font-style: normal;
     font-weight: 400;
-    line-height: 68px; /* 67.04px */
+    line-height: 1.21082621083; /* 67.04px */
     letter-spacing: -1.687px;
     display: inline;
   
@@ -6108,6 +6108,7 @@ padding-bottom: 5rem;
     display: flex;
     padding-top: 24px;
     gap:18.75px;
+
     padding-left: 2px;
   }
   .applyHeroContextImage {
@@ -6120,6 +6121,7 @@ padding-bottom: 5rem;
   .applySubtextContainer {
     width: 100%;
     padding-top: 2.325rem;
+    //background-color: red;
   
   }
   
@@ -6136,8 +6138,11 @@ padding-bottom: 5rem;
   }
   
   .applyTodayButton {
-    width: 197px;
-    height: 71.5px;
+    //width: 197px;
+    width: 13rem;
+    height: 4rem;
+  
+  //  height: 71.5px;
     flex-shrink: 0;
     border-radius: 90.75px;
     border: 7.5px solid #FAF0C6;
@@ -6149,7 +6154,7 @@ padding-bottom: 5rem;
     text-align: center;
     font-family: Helvetica Neue;
     //font-size: 22.5px;
-    font-size: 1.40625rem;
+    font-size: clamp(1.25rem, 1.75vw, 1.4rem);
     padding-bottom: 1.5px;
     font-style: normal;
     font-weight: 500;
@@ -6163,8 +6168,9 @@ padding-bottom: 5rem;
     transform: scale(1.05);
   }
   .explorePrevButton {
-    width: 351px;
-    height: 71.5px;
+
+    width: 20rem;
+    height: 4rem;
     flex-shrink: 0;
     border-radius: 90.75px;
     border: 2.25px solid #F9F9F9;
@@ -6176,6 +6182,7 @@ padding-bottom: 5rem;
     font-family: Helvetica Neue;
     //font-size: 22.5px;
     font-size: 1.40625rem;
+    font-size: clamp(1.25rem, 1.75vw, 1.4rem);
     font-style: normal;
     font-weight: 500;
     padding-bottom: 1.5px;
@@ -6395,7 +6402,7 @@ padding-bottom: 5rem;
     margin-top: 10.5vh;
     gap:.725rem;
     height: 12.75px;
-    padding-left: 3.875rem;
+    padding-left: 3rem;
   }
   .testimonialSlide {
     width: 13px;
@@ -6976,6 +6983,203 @@ padding-bottom: 5rem;
   }
   .slideButtonArrow {
     user-select: none;
+  }
+}
+@media (min-width: 1281px) and (max-width: 1439px) {
+  .contentContainerHero {
+    // padding-left: 6rem;
+    padding-left: 4.25rem;
+    //padding-left: 5.9625rem;
+    //background-color: red;
+    padding-top: 1rem;
+    // padding-top: 2.25rem;
+     max-width: fit-content;
+     width: 55%;
+
+     //background-color: red;
+     
+    // background-color: rgba(166, 0, 255, 0.192);
+     height: 100%;
+     display: flex;
+     flex-direction: column;
+   
+    // background-color: red;
+   
+   }
+   .heroText{
+    color: #FAF3D6;
+    font-family: "Helvetica Neue";
+    //font-size: 109.5px;
+  // font-size: 6.84375rem;
+    font-size: clamp(3.125rem, 7.875vw, 6.84rem);
+    font-style: normal;
+    font-weight: 500;
+  //  line-height: 100px; /* 138.099px */
+   // white-space: nowrap;
+   line-height: 0.91374269005;
+  
+    letter-spacing: -3px;
+  }
+  .contentContainerAlt {
+    width: 45%;
+
+   // background-color: blue;
+   // background-color: rgba(0, 255, 94, 0.192);
+    height: 100%;
+    padding-left: 1.05rem;
+    padding-top: 1rem;
+    padding-right: 2.5rem;
+  }
+  .contentVideoContainer {
+    outline:.5px solid #FAF3D6;
+   // min-width: 34.675rem;
+   // max-width: 34.675rem;
+   // min-height: 31.5rem;
+  //  max-width: 38.5rem;
+   // min-width: 27.5rem;
+   // max-width: 27.5rem;
+    width: 100%;
+    min-width: 100%;
+    z-index: 1;
+    height: 31.5rem;
+    max-height: auto;
+  
+    //height: 35vw;
+    display:flex;
+    align-items: center;
+    justify-content: center;
+  
+    color: #FAF3D6;
+    padding-top: .75rem;
+    padding-left: .75rem;
+    font-family: "Helvetica Neue";
+    //font-size: 37.5px;
+    font-size: 2.34375rem;
+    font-style: normal;
+    background-color: #6A7055;
+    font-weight: 500;
+    line-height: 120%; /* 60.99px */
+    letter-spacing: -1.5px;
+    text-transform: uppercase;
+  
+  }
+  .footerContainer {
+  
+    max-height: fit-content;
+    min-height: fit-content;
+   // height: auto;
+    width: 100%;
+    //width: 100%;
+    background-color: #252525;
+    padding-bottom: 3.75rem;
+    display: flex;
+    flex-direction: column;
+    padding-left:0;
+    margin-top: 0;
+  }
+  .footerContent {
+    height: fit-content;
+    width: 100%;
+    margin-top: 3.5rem;
+    text-align: center;
+
+    text-align: left;
+    //background-color: red;
+    display: flex;
+    margin-left: 0;
+
+    //margin-left: 9.32vw;
+  }
+  .footerLeftContent {
+    height: fit-content;
+    margin-top: 0rem;
+    display: flex;
+    flex-direction: column;
+    //margin-left: 9.32vw;
+    text-align: left;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+  
+  }
+  .footerButton {
+    width: 80%;
+   // height: 9.24vh;
+    height: auto;
+    //max-height: 9.24vh;
+    //flex-shrink: 0;
+    margin-left: auto;
+    margin-right: auto;
+    padding-top: 1.125rem;
+    align-self: center;
+    padding-bottom:1.125rem;
+    display: flex;
+
+    align-items: center;
+    justify-content: center;
+    border-radius: 13.5px;
+    border: 2.25px solid #FAF3D6;
+    color: #FFF;
+    text-align: center;
+    font-family: "Helvetica Neue";
+   // font-size: 22.5px;
+    font-size: clamp(1.2rem, 2vw, 1.4rem);
+    font-style: normal;
+    font-weight: 700;
+    transform: translateX(0rem);
+    line-height: 121.98%; /* 27.445px */
+    letter-spacing: -0.675px;
+    text-transform: capitalize;
+    background: #252525;
+    margin-top: 2rem;
+    transition: all .175s linear;
+  }
+  .footerButton:hover {
+    box-shadow: 0px 6px 12px 0px #0a0a0ae3;
+    background-color: #FAF3D6;
+    color:#151515;
+  }
+  .footerTitle {
+    color: #FAF3D6;
+    display: inline;
+    font-family: "Helvetica Neue";
+    //font-size: 52.5px;
+    //font-size: 3.28125rem;
+    font-size: clamp(1.925rem, 5vw, 3.28rem);
+    font-style: normal;
+    font-weight: 700;
+
+    line-height: 121.98%; /* 64.039px */
+    letter-spacing: -1.575px;
+  }
+  .footerSubtext {
+    color: #FAF3D6;
+  
+    font-family: "Helvetica";
+    padding-top: 1.25rem;
+   // font-size: 26.25px;
+   font-size: clamp(1.3rem, 2.5vw, 1.64rem);
+   // font-size: 1.640625rem;
+    font-style: normal;
+    font-weight: 300;
+    line-height: 119.182%; /* 31.285px */
+    letter-spacing: -0.787px;
+  }
+  .footerImageContainer {
+    border-radius: 37.5px;
+    width: 43.645vw;
+    height: 100%;
+    transform: translateX(6.45vw);
+    display: none;
+   // display: flex;
+    align-items: center;
+    justify-content: center;
+   // margin-left: auto;
+    border: 1px solid #FAF3D6;
+    background-color: #252525;
+  }
+  .cornerSubVector {
+    display: none;
   }
 }
 
