--- a/styles/page.module.scss
+++ b/styles/page.module.scss
@@ -4897,7 +4897,7 @@ padding-bottom: 5rem;
     text-transform: uppercase;
   }
   .propositionTopContainer {
-    background: transparent;
+
     background: linear-gradient(180deg, rgba(158, 186, 158, 0.29) 0%, rgba(248, 199, 25, 0.00) 100%);
     height: fit-content; // set to 100vh maybe
     width: 100%;
@@ -5275,8 +5275,10 @@ padding-bottom: 5rem;
   }
   .faqsWrapper {
     //height: auto;
-    margin-top: 9.756vh;
+   // margin-top: 9.756vh;
+    margin-top: 4.4rem;
     width: 100%;
+
     display: flex;
     flex-direction: column;
   }
@@ -5971,10 +5973,12 @@ padding-bottom: 5rem;
     //height: 61.5vh;
     display: flex;
     flex-direction: column;
-    height: 78.5vh;
+    height: 35.375rem;
+   // height: 78.5vh;
   }
   .carouselContainer {
-    height: 61.5vh;
+    //height: 61.5vh;
+    height: 27.71rem;
     background-color: #454545;
     min-width: fit-content;
   
@@ -6049,8 +6053,9 @@ padding-bottom: 5rem;
     max-width: 100vw;
     background-color: transparent;
    // background-color: red;
-    max-height: 61.5vh;
-   
+   // max-height: 61.5vh;
+    max-height: 27.71rem;
+    height: 27.71rem;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -6064,7 +6069,11 @@ padding-bottom: 5rem;
   
   // "explore previous events
   .applyContainer {
-    height: 103.25vh;
+   // height: 103.25vh;
+    height: fit-content;
+    padding-top: 4.75rem;
+    padding-bottom: 3.25rem;
+    
     width: 100%;
     background-color: #303C30;
     display: flex;
@@ -6169,7 +6178,7 @@ padding-bottom: 5rem;
   }
   .explorePrevButton {
 
-    width: 20rem;
+    width: 19rem;
     height: 4rem;
     flex-shrink: 0;
     border-radius: 90.75px;
@@ -6209,8 +6218,9 @@ padding-bottom: 5rem;
   .applyVideoContainer {
     //width: 33.88vw;
     //height: 64.7vh;
+    height: 31.5rem;
     min-width: 88%;
-    min-height: 75%;
+    //min-height: 75%;
     border: 0.75px solid #FAF3D6;
     display: flex;
     align-items: center;
@@ -6233,7 +6243,9 @@ padding-bottom: 5rem;
   .propositionTopContainer {
     background-image: linear-gradient(180deg,#7c8874 ,rgb(104, 110, 80) 40%, #303c30);
    // background: linear-gradient(180deg, rgba(158, 186, 158, 0.29) 0%, rgba(248, 199, 25, 0.00) 100%);
-    height: 100vh;
+   // height: 100vh;
+   height: fit-content;
+
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -6267,7 +6279,9 @@ padding-bottom: 5rem;
     background-image:linear-gradient(180deg, rgba(149, 185, 149, 0.35), rgba(248, 233, 25, 0.15) 48%, rgba(237, 249, 73, 0.15) 65%, rgba(149, 185, 149, 0.3));
   }
   .testimonialContainer {
-    height: 90.125vh;
+   // height: 90.125vh;
+    padding-bottom:7.75rem;
+    height: fit-content;
     width: 100%;
     display: flex;
     align-items: center;
@@ -6278,9 +6292,12 @@ padding-bottom: 5rem;
   
   .testimonialWrapper {
     display: flex;
-    height: 60.75vh;
+    height: fit-content;
+   // height: 60.75vh;
     align-items: center;
-    margin-top: 12vh;
+   // margin-top: 12vh;
+
+    padding-top: 0rem;
     align-self: flex-start;
    // justify-content: center;
     flex-direction: column;
@@ -6301,7 +6318,8 @@ padding-bottom: 5rem;
     text-align: center;
     font-family: Helvetica Neue;
    // font-size: 48.75px;
-    font-size: 3.046875rem;
+   // font-size: 3.046875rem;
+    font-size: clamp(2rem, 5vw, 3.04rem);
     font-style: normal;
     text-align: center;
     font-weight: 500;
@@ -6314,24 +6332,31 @@ padding-bottom: 5rem;
     font-family: Helvetica Neue;
     display: inline;
     //font-size: 26.25px;
-    font-size: 1.640625rem;
+    font-size: clamp(1.2rem, 2.75vw, 1.64rem);
+   // font-size: 1.640625rem;
     font-style: normal;
     font-weight: 300;
     line-height: 120.781%; /* 31.705px */
     letter-spacing: -0.787px;
   }
   .testimonialCardWrapper {
-    height: 28.113vh;
+  //  height: 28.113vh;
+    height: fit-content;
     //transform: translateX(-50vw);
-    width: 150vw;
+    width: 150%;
     display: flex;
     align-items: center;
-    gap:2.3vw;
-    padding-left: 2vw;
-    margin-top: 8vh;
+   // gap:2.3vw;
+    gap:1.45rem;
+   // padding-left: 2vw;
+    padding-left: 1.3rem;
+   // margin-top: 3.425rem;
+    margin-top: 4rem;
   }
   .testimonialCard {
-    width: 48.5vw;
+    //width: 48.5vw;
+    width: 48.5%;
+    min-width: none;
     height: fit-content;
     border-radius: 16.5px;
     padding-top: 1.65rem;
@@ -6399,7 +6424,8 @@ padding-bottom: 5rem;
     width: 11.45vw;
     display:flex;
     justify-content: center;
-    margin-top: 10.5vh;
+  //  margin-top: 10.5vh;
+    margin-top: 5.125rem;
     gap:.725rem;
     height: 12.75px;
     padding-left: 3rem;
@@ -6965,6 +6991,7 @@ padding-bottom: 5rem;
   .slideButtonContainer {
     width: 2.95rem;
     height: 2.2rem;
+    max-height: 2.2rem;
     transition: all .15s linear;
     display: flex;
     align-items: center;
