--- a/styles/proposition.module.scss
+++ b/styles/proposition.module.scss
@@ -2348,20 +2348,64 @@
         height: 70vh;
          background-image: url('../public/assets/wave.svg');
     }
+
+    .propositionTopRight {
+        width:fit-content;
+
+
+        margin-left: auto;
+
+        margin-right: auto;
+      // background-color: red;
+        padding-left: 0;
+        height: 27rem;
+        display: flex;
+       // justify-content: center;
+        padding-top: 0;
+        margin-top:2rem;
+        z-index: 1;
+
+    }
+    .topRightImage {
+        margin-left: auto;
+        margin-right: auto;
+        align-self: center;
+     }
+     .exploreImageButton {
+        width: fit-content;
+        height: 3.875rem;
+        border-radius: 90.75px;
+        border: 2.25px solid #F9F9F9;
+        background: rgba(37, 37, 37, 0.42);
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap:12px;
+        backdrop-filter: blur(8px);
+        padding-left: 0px;
+        align-self: flex-end;
     
+        padding-left: 1.75rem;
+        padding-right: 1.75rem;
+    
+        margin-bottom: 1.75rem;
+        transition: all .15s linear;
+    }
     .midWrapper {
         width:100%;
         margin-top:4rem;
         height: fit-content;
         display: flex;
         flex-direction: row;
+       // align-items: center;
+      //  justify-content: space-evenly;
     // background-color: rgba(128, 0, 128, 0.8);
     }
     .midWrapperLeft {
-        width: 45%;
-  
+        width: 52.5%;
+       // min-width: 45%;
         height: 27rem;
-      //  background-color: red;
+        background-color: red;
         display: flex;
         flex-direction: row;
         z-index: 1;
@@ -2373,8 +2417,9 @@
     // background-color: #252525;
     }
     .midImageLeft {
-        max-width: 88%;
-        min-width: 88%;
+        max-width: 50%;
+        min-width: 50%;
+        width: auto;
         height: 100%;
         display: flex;
         align-items: center;
@@ -2385,8 +2430,9 @@
         background-position: center;
     }
     .midImageRight {
-        min-width:88%;
-        max-width: 88%;
+        min-width:50%;
+        max-width: 50%;
+        width: auto;
         height: 100%;
         display: flex;
         align-items: center;
@@ -2398,16 +2444,20 @@
         background-position: center;
     }
     .midWrapperRight {
-        width: 100%;
-        padding-right: 2.75rem;
+        width: fit-content;
+     //   padding-right: 2.75rem;
+     //   min-width: fit-content;
+    // background-color: red;
+    margin-left: auto;
         height: 100%;
+        margin-right: auto;
         align-items: center;
-      
+    //    margin-left: auto;
         align-self: flex-start;
         justify-content: center;
         display: flex;
         padding-top: 0;
-    //  background-color: rgba(0, 0, 255, 0.2);
+     // background-color: rgba(0, 0, 255, 0.2);
     }
     .midWrapperContext {
         //width: 30.625vw;
