--- a/styles/pricing.module.scss
+++ b/styles/pricing.module.scss
@@ -2383,3 +2383,16 @@
     }
     
 }
+@media (min-width: 1281px) and (max-width: 1439px) {
+   
+    .packageWrapper1 {
+
+        height: fit-content;
+        padding-bottom: 2rem;
+    }
+    .packageWrapper2 {
+
+        height: fit-content;
+        padding-bottom: 2rem;
+    }
+}
