finished large breakpoint

--- a/styles/proposition.module.scss
+++ b/styles/proposition.module.scss
@@ -3549,6 +3549,11 @@
         background-position: center;
         
     }
-
+    .caseStudiesButton {
+       
+        margin-bottom: 1rem;
+        margin-top: 2.5rem;
+      
+    }
     
 }
