--- a/styles/pricing.module.scss
+++ b/styles/pricing.module.scss
@@ -2828,18 +2828,6 @@
     }
 }
 @media (min-width: 1441px) {
- 
-
-    .packageWrapper1 {
-        height: fit-content;
-        width: 50%;
-        padding-bottom: 2.5rem;
-    }
-    .packageWrapper2 {
-        width: 50%;
-        height: fit-content;
-        padding-bottom: 2.5rem;
-    }
     .pricingTopContainer {
         display:flex;
         width: 100%;
@@ -2863,14 +2851,7 @@
         
       //  background-color: red;
     }
-    .pricingLogoContainer {
-        display: flex;
-        flex-direction: column;
-        justify-content: flex-start;
-        padding-left: 0;
-    
-    
-    }
+  
     .pricingHeaderText {
         color: #FAF3D6;
     
@@ -2895,25 +2876,27 @@
       //  font-size: 8.988625rem;
         font-size: clamp(4rem, 10vw, 8.9rem);
         font-style: normal;
+        
         font-weight: 700;
         text-align: center;
+        
         padding-top: .75rem;
         line-height: normal;
-        padding-left: 0;
+        padding-left: 1rem;
     }
     .pricingLogoSubtext {
         color: #CFB894;
-        transform: translateY(-.625rem);
+        transform: translateY(-1.25rem);
         font-family: Helvetica Neue;
        // font-size: 57.5px;
-       padding-right: .5rem;
+       padding-right: 1rem;
 
-        font-size: clamp(2.25rem, 6vw, 3.04rem);
+        font-size: clamp(2.5rem, 6vw, 3.5rem);
         display: inline;
         text-align: center;
         padding-left: 0%;
         padding-top: 0rem;
-    
+        margin-top: 0;
         font-style: normal;
         font-weight: 300;
         line-height: normal;
@@ -2931,13 +2914,27 @@
     
         line-height: normal;
     }
+
+    .packageWrapper1 {
+        height: fit-content;
+        min-width: 50%;
+        padding-top: .5rem;
+        padding-bottom: 2.75rem;
+    }
+    .packageWrapper2 {
+        min-width: 50%;
+        height: fit-content;
+        padding-top: .5rem;
+        padding-bottom: 2.75rem;
+    }
+ 
     .textCircle {
         z-index: 1;
         position:absolute;
         left:75vw;
         display: block;
-        width: 12.5rem;
-        height: 12.5rem;
+        width: 16rem;
+        height: 16rem;
        
         top:12vh;
         //transition: all .25s ease-in-out;
@@ -2970,7 +2967,7 @@
        flex-direction: row;  
        // background-color: red;
 
-        margin-top: 3.75rem;
+        margin-top: 6rem;
         align-items: flex-start;
         padding-left: 0;
     }
@@ -2979,35 +2976,19 @@
         width: fit-content;
         height: fit-content;
         border: 1px solid #7978F8;
-        padding-left: 1.5rem;
-        padding-right: 1.5rem;
-        padding-top: .125rem;
-        padding-bottom: .125rem;
+        padding-left: 2.5rem;
+        padding-right: 2.5rem;
+        padding-top: .75rem;
+        padding-bottom: .75rem;
   
 
         top:-6rem;
     
     
-        align-items: center;
-        justify-content: center;
-        color: #FAF3D6;
-        position: absolute;
-        font-family: "Helvetica Neue";
-        //font-size: 25px;
-       // font-size: 1.5625rem;
+      
         white-space: nowrap;
-        font-size: clamp(1rem, 1vw, 1.5rem);
-        font-style: normal;
-        font-weight: 500;
-        line-height: 35.522px; /* 140% */
-        letter-spacing: 0.761px;
-        text-transform: uppercase;
-        box-shadow: 0px 0px 15.675px #7978F8;
-        background-color: rgba(121, 120, 248, 0.15);
-       // filter: drop-shadow(0px 0px 15.675px #7978F8);
-        border-top-left-radius: 2rem;
-        border-top-right-radius: 2rem;
-        border-bottom-left-radius: 2rem;
+        font-size: clamp(1rem, 1.625vw, 1.5rem);
+     
     
     }
     .gradientBorder {
