--- a/styles/page.module.scss
+++ b/styles/page.module.scss
@@ -9253,14 +9253,15 @@ padding-bottom: 5rem;
   
   .footerContainer {
   
-    max-height: fit-content;
-    min-height: fit-content;
-    height: auto;
+
+    height: fit-content;
     width: 100%;
     //width: 100%;
     background-color: #252525;
     padding-bottom: 3.75rem;
     display: flex;
+
+   
     flex-direction: column;
     padding-left:0;
     margin-top: 0;
@@ -9299,7 +9300,7 @@ padding-bottom: 5rem;
     margin-top: 0rem;
    // gap:.35rem;
     display: flex;
-    padding-bottom: 1.5rem;
+    padding-bottom: 2rem;
     justify-content: center;
     flex-direction: column;
     //margin-left: 9.32vw;
