--- a/styles/navbar.module.scss
+++ b/styles/navbar.module.scss
@@ -7,7 +7,7 @@
    // background-color: #688268;
     margin-left: auto;
    // padding-top: 1.625rem;
-   // position: absolute;
+    position: absolute;
 
     margin-top: 1.625rem;
     align-items: flex-end;
