--- a/app/globals.css
+++ b/app/globals.css
@@ -99,8 +99,9 @@ body {
   width: 100vw;
   height: 100%;
  /*background: linear-gradient(180deg,#7c8874 ,#686f4f 4.75%, #2e392e 11.75%);*/
-  background: linear-gradient(180deg,#7c8874 ,rgb(104, 110, 80) 3%, #2e392e 8%);
+ /* background: linear-gradient(180deg,#7c8874 ,rgb(104, 110, 80) 3%, #2e392e 8%);*/
  /* background:linear-gradient(rgba(158,186,158,.58));*/
+ background: #666C56;
   
 }
 
@@ -113,9 +114,9 @@ a {
     padding: 0;
     margin: 0;
     overflow-y: scroll;
-    background: linear-gradient(180deg,#303C30 ,#212a21 60%);
-   
-    background: #303C30;
+    /*background: linear-gradient(180deg,#303C30 ,#212a21 60%);*/
+    background: #575E45;
+   /* background: #303C30;*/
    /* width: 100%;*/
    min-width: 100%;
   }
@@ -133,15 +134,15 @@ a {
     overflow-y: scroll;
     background: linear-gradient(180deg,#7c8874 ,rgb(104, 110, 80) 2.5%, #2e392e 7%);
    
- 
+    background: #575E45;
    /* width: 100%;*/
    min-width: 100%;
   }
   html{
     padding:0;
     margin:0;
-    background: #303C30;
-
+   /* background: #303C30;*/
+   background: #575E45;
   }
 }
 @media (prefers-color-scheme: dark) {
