--- a/styles/education.module.scss
+++ b/styles/education.module.scss
@@ -48,7 +48,8 @@
     border-radius: 37.5px;
     display: flex;
     background-image: url('../public/photos/panel3.png');
-
+    background-size: cover;
+    background-repeat: no-repeat;
    // align-self: center;
     //align-items: center;
     //justify-content: center;
@@ -234,18 +235,20 @@
     flex-direction: column;
     align-items: flex-start;
     //max-width: 32.5rem;
-  //  width: 32.5rem;
-    max-width:34rem;
+    max-width: 32.5rem;
+    //max-width:34rem;
     //width: auto;
-    min-width: 38.33%;
-    //background-color: red;
+    //min-width: 38.33%;
+    min-width: 31.75%;
+    //min-width: 36.11%;
+   // background-color: red;
    z-index: 5;
 }
 .educationTextHeader {
     color: #FAF3D6;
     font-family: "Helvetica Neue";
-    //font-size: clamp(1rem, 2vw, 1.375rem);
-    font-size: clamp(1.25rem, 2vw, 1.5rem);
+    font-size: clamp(1rem, 2vw, 1.375rem);
+    //font-size: clamp(1.25rem, 2vw, 1.5rem);
     font-style: normal;
     font-weight: 500;
     line-height: 32.268px; /* 146.672% */
@@ -261,8 +264,8 @@
 .educationTitle {
     color: #FFFCFC;
     font-family: "Helvetica Neue";
-   // font-size: clamp(2.5rem, 4vw, 3.125rem);
-    font-size: clamp(3rem, 4.125vw, 4rem);
+    font-size: clamp(2.5rem, 4vw, 3.125rem);
+   // font-size: clamp(3rem, 4.125vw, 4rem);
     font-style: normal;
     font-weight: 700;
     line-height: 112%; /* 56px */
@@ -279,11 +282,11 @@
 .educationSubtext {
     color: #FFF;
     font-family: "Helvetica Neue";
-   // font-size: clamp(1.125rem, 2vw, 1.625rem);
-    font-size: clamp(1.25rem, 2vw, 1.875rem);
+    font-size: clamp(1.125rem, 2vw, 1.625rem);
+    //font-size: clamp(1.25rem, 2vw, 1.875rem);
     font-style: normal;
     font-weight: 300;
-   // line-height: 34px; /* 130.769% */
+    //line-height: 34px; /* 130.769% */
     letter-spacing: -0.5px;
  //   max-width: 32.5rem;
     line-height: 136%;
@@ -338,3 +341,22 @@
      }
    
    }
+   .educationForegroundAlt {
+    //height: 53.86rem;
+    width: 53.86rem;
+    height: 98.34rem;
+    position: absolute;
+    //left: 0;'
+    right:0;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+    z-index: 0;
+ 
+    .waveVectorAlt {
+      width: 100%;
+      left: 0;
+     // min-height: auto;
+    }
+  
+  }
